[metadata]
name = neurotune
version = 0.2.7
author = Michael Vella, Padraig Gleeson
author_email = mv333@cam.ac.uk, p.gleeson@gmail.com
url = https://github.com/NeuralEnsemble/neurotune
license = BSD-2-clause
description = A Python library for optimising neuronal models
long_description = file: README.md
long_description_content_type=text/markdown
classifiers=
    License :: OSI Approved :: BSD License
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
install_requires =
    scipy
    # contains fixes for py3
    inspyred @ git+https://github.com/aarongarrett/inspyred.git@master#egg=inspyred
    pyelectro

packages = find:

[options.packages.find]
where = .
include = neurotune*

[options.extras_require]
dev =
    NEURON
    pyelectro @ git+https://github.com/NeuralEnsemble/pyelectro.git@development#egg=pyelectro
    flake8

experimental =
    neurotune[dev]
    pyelectro @ git+https://github.com/NeuralEnsemble/pyelectro.git@experimental#egg=pyelectro

[flake8]
ignore = E501, E502, F403, F405
